--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="977370">  <td>22/10/09 22:30:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_05_Page_Factory.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:30:59</td>   <td>7633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_01_Empty_Data</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:30:59</td>   <td>8471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_02_Invalid_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:00</td>   <td>9170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_03_Not_Found_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:01</td>   <td>9975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:02</td>   <td>10808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:03</td>   <td>11637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">Login_06_Valid_Email_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:04</td>   <td>12813</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_05_Page_Factory.afterClass()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@23348b5d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:04</td>   <td>13410</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_05_Page_Factory.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:10</td>   <td>19497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_01_Empty_Data</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:11</td>   <td>20192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_02_Invalid_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:12</td>   <td>20770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_03_Not_Found_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:13</td>   <td>21618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:14</td>   <td>22611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:15</td>   <td>23583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">Login_06_Valid_Email_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:16</td>   <td>24933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_05_Page_Factory.afterClass()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@8c3b9d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:17</td>   <td>25534</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_05_Page_Factory.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:24</td>   <td>32857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_01_Empty_Data</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:25</td>   <td>33602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_02_Invalid_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:25</td>   <td>34188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_03_Not_Found_Email</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:26</td>   <td>35082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_04_Existing_Email_Empty_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:27</td>   <td>36092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_05_Existing_Email_Wrong_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:28</td>   <td>37108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_05_Page_Factory.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">Login_06_Valid_Email_Password</td> 
-  <td>main@707161353</td>   <td></td> </tr>
-<tr bgcolor="977370">  <td>22/10/09 22:31:29</td>   <td>38469</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_05_Page_Factory.afterClass()[pri:0, instance:com.nopcommerce.user.Level_05_Page_Factory@26b3fd41]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707161353</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:49</td>   <td>8941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_01_Empty_Data</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:50</td>   <td>10162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_02_Invalid_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:51</td>   <td>10965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_03_Not_Found_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:52</td>   <td>12062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:54</td>   <td>14120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:55</td>   <td>15505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">Login_06_Valid_Email_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:57</td>   <td>17013</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@13b6aecc]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:11:58</td>   <td>17822</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:08</td>   <td>27914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_01_Empty_Data</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:09</td>   <td>28983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_02_Invalid_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:10</td>   <td>29885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_03_Not_Found_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:11</td>   <td>31098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:12</td>   <td>32524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:14</td>   <td>34008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">Login_06_Valid_Email_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:17</td>   <td>37289</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@6ab778a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:12:17</td>   <td>37481</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_06_Page_Generetor_Manager.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:00</td>   <td>80105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_01_Empty_Data</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:01</td>   <td>81120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_02_Invalid_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_02_Invalid_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:02</td>   <td>82108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_03_Not_Found_Email()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_03_Not_Found_Email</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:03</td>   <td>83516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_04_Existing_Email_Empty_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_04_Existing_Email_Empty_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:05</td>   <td>85184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_05_Existing_Email_Wrong_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_05_Existing_Email_Wrong_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:07</td>   <td>86813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_06_Page_Generetor_Manager.Login_06_Valid_Email_Password()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">Login_06_Valid_Email_Password</td> 
+  <td>main@324457684</td>   <td></td> </tr>
+<tr bgcolor="7888a2">  <td>22/10/11 15:13:09</td>   <td>88916</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_06_Page_Generetor_Manager.afterClass()[pri:0, instance:com.nopcommerce.user.Level_06_Page_Generetor_Manager@38e79ae3]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@324457684</td>   <td></td> </tr>
 </table>
