--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
-                    <span>D:\eclipse_Workspace\Framework\resources\runJqueryTest.xml</span>
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -147,7 +147,7 @@
         </div> <!-- panel NopCommerce -->
         <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runJqueryTest.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;parameter name=&quot;url&quot; value=&quot;https://www.jqueryscript.net/demo/CRUD-Data-Grid-Plugin-jQuery-Quickgrid/&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.jquery.datatable.Level_10_DataTable_DataGrid&quot;/&gt;
     &lt;/classes&gt;
@@ -200,18 +200,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Table_01_Paging')
+data.setCell(0, 1, 'Table_02_Enter_Header_Textbox')
 data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 1205);
+data.setCell(0, 3, 4393);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Table_02_Enter_Header_Textbox')
+data.setCell(1, 1, 'Table_01_Paging')
 data.setCell(1, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(1, 3, 344);
+data.setCell(1, 3, 527);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -239,20 +239,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.jquery.datatable.Level_10_DataTable_DataGrid</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(firefox, https://www.jqueryscript.net/demo/CRUD-Data-Grid-Plugin-jQuery-Quickgrid/)</span>
+                <span class="method-name">beforeClass(chrome, https://www.jqueryscript.net/demo/CRUD-Data-Grid-Plugin-jQuery-Quickgrid/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Table_01_Paging</span>
-                <span class="method-start">10106 ms</span>
+                <span class="method-start">3821 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Table_02_Enter_Header_Textbox</span>
-                <span class="method-start">11317 ms</span>
+                <span class="method-start">4350 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11663 ms</span>
+                <span class="method-start">8743 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
