--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/11/01 16:45:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 16:45:37</td>   <td>10100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_01_Paging()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_01_Paging</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 16:45:38</td>   <td>11311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_02_Enter_Header_Textbox()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">Table_02_Enter_Header_Textbox</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/01 16:45:38</td>   <td>11657</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@bccb269]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/01 23:21:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_10_DataTable_DataGrid.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/01 23:21:58</td>   <td>3816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_01_Paging()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">Table_01_Paging</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/01 23:21:59</td>   <td>4345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_10_DataTable_DataGrid.Table_02_Enter_Header_Textbox()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">Table_02_Enter_Header_Textbox</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/01 23:22:03</td>   <td>8738</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_10_DataTable_DataGrid.afterClass()[pri:0, instance:com.jquery.datatable.Level_10_DataTable_DataGrid@131ef10]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
 </table>
