--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
-                    <span>D:\eclipse_Workspace\Framework\resources\runJqueryTest.xml</span>
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel NopCommerce -->
         <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runJqueryTest.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryTest.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;parameter name=&quot;url&quot; value=&quot;https://www.jqueryscript.net/demo/jQuery-Dynamic-Data-Grid-Plugin-appendGrid/&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.jquery.datatable.Level_10_DataTable_DataGrid&quot;/&gt;
     &lt;/classes&gt;
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Table_04_Action_At_Any_Row')
 data.setCell(0, 2, 'com.jquery.datatable.Level_10_DataTable_DataGrid')
-data.setCell(0, 3, 22332);
+data.setCell(0, 3, 21607);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -223,16 +223,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.jquery.datatable.Level_10_DataTable_DataGrid</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(firefox, https://www.jqueryscript.net/demo/jQuery-Dynamic-Data-Grid-Plugin-appendGrid/)</span>
+                <span class="method-name">beforeClass(chrome, https://www.jqueryscript.net/demo/jQuery-Dynamic-Data-Grid-Plugin-appendGrid/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Table_04_Action_At_Any_Row</span>
-                <span class="method-start">14477 ms</span>
+                <span class="method-start">3329 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">36812 ms</span>
+                <span class="method-start">24941 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
